fix(74): fixing select color contrast

--- a/components/01-atoms/forms/select/_select.scss
+++ b/components/01-atoms/forms/select/_select.scss
@@ -1,7 +1,7 @@
 // CSS-only select styling (from https://github.com/filamentgroup/select-css)
 
 .form-item__dropdown {
-  border: 1px solid clr(muted);
+  border: 1px solid clr(accent);
   display: block;
   position: relative;
 
